tests/resource/invalid/type/access/access_set.mamba
def my_set := { 2, 3, 4 }

my_set[0]
